--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
-/* Your CSS Code here. */
+nav  ul{
+	list-style-type:none;
+	display:flex;
+	gap:20px;
+	
+}
+nav a{
+	text-decoration:none;
+	color:blue;
+}
+section{
+	margin-top:20px;
+}
